# FourTop

./: .gitignore  EventSelection_1.sh  EventSelection_4top_v1.cpp  EventSelection_4top_v1.h  GetEntry.cpp  GetEntry_all.sh  HLThistmaker.cpp  HLThistmaker.h  HLTstudy_v1.cpp  PlotterPreselection_4top.h  PlotterPreselection_4top_v1.cpp  PlotterPreselection_PlayWithMC.cpp  PlotterPreselection_PlayWithMC.h  README.md  copy_tttt.py  createHistos.cpp  createHistos.h  getGenNum.cpp  getGenNum_all.sh  getMultipleNtuples.C  hepsub.sh  leptonRecoEff.cpp  leptonRecoEff.h  makeIHEPjob.py  makeTSelector.C  objectSelection.C  objectSelection.h  objectTSelector.C  objectTSelector.h  printPurity.cpp  printYields.cpp  run_objectTSelector.C  setEnv_cmsenv.sh  setEnv_new.sh  setEnv_newNew.sh  setupEnv.sh  sub_run_objectTSelector.sh  submitJob.h  submitJob.sh  toDoList.md  (+4 more)
SF_dineutrino/: 2DTrigger_SingleElectron_2017.root  ElectronTriggerSF.root  ForwardJetSFFinal.root  SF_2D.root  SF_2D_veto.root  makeHEPSubmit.py
data_rootFiles/: PUHistogram_mc2016_preVFP.root  PUHistogram_mc2018.root
fabio/: createHistos.cpp  createHistos_chain.cpp  createHistos_chain.h  leptonRecoEff.cpp  printPurity.cpp  printPurity.h  printYields.cpp  printYields.h  printYields_all.sh  trigEff.cpp  trigEff_vs_HT.cpp  trigEff_vs_HT.h  trigEff_vs_HT_perprocess.cpp  trigEff_vs_HT_perprocess.h
hua/: EYandSP_usingClass.C  EYandSP_usingClass.h  EYandSP_usingClass_v2.C  EYandSP_usingClass_v2.h  EYandSP_usingClass_v3.C  EYandSP_usingClass_v3.h  HLTstudy_v1.cpp  Makefile  PlotterPreselection_PlayWithMC.cpp  Process_Class.C  Process_Class.h  Process_class.C  Process_class.h  add2016MVAtrees.py  addTwoCSV.py  checkEntriesT2T3.C  copy_4tSamples.py  crossSectionMap.h  drawDataMCComparison.C  eventYieldAndSerepartianPower.C  eventYieldAndSerepartianPower.h  generateHTfor1tau0l.C  getEnties.C  getMultipleNtuples.C  makeJob_makeVaribles_forBDT.py  makeSelector.C  makeVariblesTree.C  makeVariblesTree.h  makeVariblesTree_v2.C  makeVariblesTree_v2.h  makeVaribles_forBDT.C  makeVaribles_forBDT.h  makeplot_fromAnshual.py  oldEYList.h  plotBgsAndSignalHist.py  plotForFakeRate.py  plotTemplates.py  plotVaribles.py  plotYieldComparison.py  producePileupMC.C  (+7 more)
hua/objectSelection/: CMakeLists.txt  Makefile  add2CSV2016gen.py  checkInOutFile.py  getGenSumFromRunTree.py  inputMap.C  run_objectTSelectorForNanoAOD.C  writeHistsToOneFile.py
hua/objectSelection/genWeightCSV/: genSum_2016postVFP.csv
hua/objectSelection/oldMiniAODcode/: makeJob_objectTSelector.py  testRunForAllFile.py
hua/tmva/newCode/: CMakeLists.txt  Makefile  getTreeBranches.py  my_program  processClass.h  run_inputOptimization.py  run_tmvaBDT_training.py  tmvaBDT_training.C
hua/tmva/newCode/inputList/: branch_names.csv  inputList_1tau0l.csv  inputList_1tau0l_final26.csv  inputList_1tau0l_finalFinal26.csv  inputList_1tau1l.csv  inputList_1tau1l_btag.csv  inputList_1tau1l_final.csv  inputList_1tau1l_final25.csv  inputList_1tau2l.csv  inputList_noBtagShape.csv  inputList_noTauTT.csv  inputList_tauTT.csv
inputFiles/: genSumMap.h  genSumMap2016.h  genSumMap2016APV.h  genSumMap2017.h  genSumMap2018.h
makeVariables_goodCode/: Makefile
myLibrary/: Makefile  commenFunction.C  commenFunction.h
objectSelection/: Linkdef.h  Loader.C  Makefile  checkInOutFile.py  checkJobStatus.py  getGenSumFromRunTree.py  inputMap.C  inputMap.h  makeJob_objectTSelector.py  makeJob_objectTSelectorForNanoAOD.py  makeJob_objectTSelector_forSeperate.py  makeTSelector.C  objectTSelector.C  objectTSelector.h  objectTSelectorForNanoAOD.C  objectTSelectorForNanoAOD.h  runObjectSlection.sh  run_objectTSelector.C  run_objectTSelectorForNanoAOD.C  subAllJobs.sh  subAllProcess_seperate.sh  testRunForAllFile.py  utilityFunctions.C  utilityFunctions.h  writeHistsToOneFile.py
objectSelection/objectSelectionOptimized/: CMakeList.txt  CMakeLists.txt  HLTSelector.h  METfilter.h  Makefile  eleTopMVASel.C  eleTopMVASel.h  eventReader_nano.C  eventReader_nano.h  goodLumiAndPVSel.h  inputMap.C  inputMap.h  jetSel.C  jetSel.h  muTopMVASel.C  muTopMVASel.h  muonSelector.h  objectSelectionNano.C  objectSelectionNano.h  run_objectSelection.C  tauSel.C  tauSel.h  usefulFunc.C  usefulFunc.h
objectSelection/objectSelectionOptimized/apps/: run_objectSelection.C
objectSelection/objectSelectionOptimized/include/: HLTSelector.h  PUWeightCal.h  copyBranch.h  eleMVASel.h  eleTopMVASel.h  eventReader_nano.h  jetSel.h  muMVASel.h  objectSelectionNano.h  tauSel.h
objectSelection/objectSelectionOptimized/src/: HLTSelector.C  METfilter.C  PUWeightCal.C  copyBranch.C  eleMVASel.C  eleTopMVASel.C  goodLumiAndPVSel.C  inputMap.C  jetSel.C  muTopMVASel.C  objectSelectionNano.C  run_objectSelection.C  tauSel.C  usefulFunc.C
objectSelection/objectSelectionOptimized/trash/: Makefile
objectSelectionOptimized/: Makefile  tempJobSub.sh
oldCode/: EventSelection_4top_v1.cpp  HLT.h  PlotterPreselection_4top.h  objectSelection.C  skimNtuple.C
plots/: ProgressReport0916.tex  groupmeeting_original.tex  progress_report0916.tex
plotting/: add2016MVAtrees.py  addJESTemplatesToHistFile.py  addTemplateNew.py  addTemplatesForCombine.py  calBtagR.py  checkJobResult.py  checkNanoAOD.py  checkTauEff.py  checkTriggerEff_rDataFrame.py  checkTriggerSF.py  cleanFolder.py  cleanJysVariationFolder.py  compile_objSelect_forJES.py  compile_treeAnalysis_forEachMassPoint.py  copyT2toT3.py  copyTTTTSample.py  copyVLLsamples.py  copyVLLsamples_2016.py  copyVLLsamples_2016APV.py  copyVLLsamples_2017.py  copyVLLsamples_2018.py  copyVLLsamples_new.py  createFakeLeptonTree.py  createFaketauTree.py  cutflow.py  cutflow_new.py  dataPDOverlapRemoval.py  examineNano.py  getGenSum.py  getPDFAndISRFSRNormalizingFactor.py  handleNanoaodFromCrab.py  inspectingTauID_RDataFrame.py  mergeRun3Files.py  modify_makeJob_forWriteHist_BDT_for_VLL.py  optimizeBinning.py  pl.py  pl_postFit.py  plotBtagEff.py  plotForFakeRate.py  plotHLTEfficiency.py  (+14 more)
skimNano/: input.txt  skimNaon_cfg.py  skim_cfg.py
src_cpp/: lumiAndCrossSection.h
todo/: June_todoList.md  todo_April2023.md  (+1 more)
(+3933 files in other folders)
